<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:text="Order"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintStart_toStartOf="@id/tv_order"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        android:layout_marginTop="32dp"

        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:text="@string/name_label_text"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/name_label"
        app:layout_constraintBaseline_toBaselineOf="@id/name_label"
        android:layout_marginStart="40dp"
        android:inputType="textPersonName"
        android:hint="Enter Your name"
        android:ems="10"
        />

    <TextView
        app:layout_constraintStart_toStartOf="@id/tv_order"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        android:layout_marginTop="32dp"

        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:text="@string/address"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintBaseline_toBaselineOf="@id/address_label"
        android:inputType="textMultiLine"
        android:hint="Enter Address"
        android:ems="10"
        />

    <TextView
        app:layout_constraintStart_toStartOf="@id/tv_order"
        app:layout_constraintTop_toBottomOf="@id/address_label"
        android:layout_marginTop="32dp"

        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:text="@string/address"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
        android:inputType="phone"
        android:hint="Enter Phone"
        android:ems="10"
        />

    <TextView
        app:layout_constraintStart_toStartOf="@id/tv_order"
        app:layout_constraintTop_toBottomOf="@id/phone_label"
        android:layout_marginTop="32dp"

        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:text="Note"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintBaseline_toBaselineOf="@id/note_label"
        android:inputType="textCapSentences"
        android:hint="Enter note"
        android:ems="10"
        />

    <TextView
        app:layout_constraintStart_toStartOf="@id/tv_order"
        app:layout_constraintTop_toBottomOf="@id/note_label"
        android:layout_marginTop="32dp"

        android:id="@+id/delivery_label"
        android:layout_width="wrap_content"
        android:text="Choose a delivery method:"
        android:textSize="18sp"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delivery_label">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/same_day_messenger_service" />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/next_day_ground_delivery" />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pick_up" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>