<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<!--    <fragment-->
<!--        android:id="@+id/nav_host_fragment_content_main"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navGraph="@navigation/nav_graph" />-->

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/textintro"
     android:text="@string/droid_desserts"
     android:textStyle="bold"
     android:textSize="24sp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginTop="8dp"
     />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_donut"
        android:contentDescription="@string/donut_desc"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/donut_circle"
        android:onClick="showDonutOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textintro" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_icecream"
        android:contentDescription="@string/icecreate_desc"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/icecream_circle"
        android:onClick="showIceCreamOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_donut" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_froyo"
        android:contentDescription="@string/froyo_desc"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/froyo_circle"
        android:onClick="showFroyoOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icecream" />

    <TextView
        android:id="@+id/tv_donut_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/donut_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_donut"
        app:layout_constraintTop_toTopOf="@id/iv_donut"
        android:onClick="showDonutOrder"
        />

    <TextView
        android:id="@+id/tv_icecreame_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/icecreate_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_icecream"
        android:onClick="showIcecreamOrder"
        app:layout_constraintTop_toTopOf="@id/iv_icecream" />

    <TextView
        android:id="@+id/tv_froyo_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/froyo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_froyo"
        android:onClick="showFroyoOrder"
        app:layout_constraintTop_toTopOf="@id/iv_froyo" />

</androidx.constraintlayout.widget.ConstraintLayout>